# ambilink

./: .gitignore  .gitmodules  README.md  build_vst3_linux.sh  install_vst3_linux.sh
code/vst/: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  clean_vst3.sh  conanfile.py  conanfile.txt  install_dependencies.sh  make_vst3.sh  open_projucer_project.sh
code/vst/cmake/: ambilink.cmake  configure_juce.cmake  configure_saf.cmake
code/vst/conan_profiles/: base  ubuntu20  ubuntu20.conanprofile
code/vst/projucer_project/: Ambilink.jucer
code/vst/projucer_project/Builds/LinuxMakefile/: Makefile
code/vst/projucer_project/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
code/vst/projucer_project/Source/: DataTypes.h  Exceptions.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  ValueIDs.h
code/vst/projucer_project/Source/Encoder/: BasicEncoder.h
code/vst/projucer_project/Source/Events/: Sources.h
code/vst/sandbox/: CMakeLists.txt  sandbox.cpp
code/vst/src/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
code/vst/src/Encoder/: BasicEncoder.cpp  Constants.h
code/vst/src/Events/: Consumers.cpp  Consumers.h  Events.h
code/vst/src/GUI/: ConnectionScreen.cpp  ErrorScreen.h  LookAndFeel.h  MainScreen.cpp  ObjectSelectionScreen.cpp  ObjectSelectionScreen.h  Screen.h
code/vst/src/IPC/: ByteIO.cpp  ByteIO.h  Client.cpp  Client.h  Exceptions.h  Protocol.cpp  Protocol.h  Utils.h
code/vst/src/Math/: DirectionFromLocation.cpp
code/vst/src/Utility/: TimelineDirectionData.cpp  TimelineDirectionData.h  Utils.cpp
documentation/: Doxyfile  ipc.md
(+61 files in other folders)
